--- a/index.html
+++ b/index.html
@@ -1,150 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DecorAI</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #fafafa;
-      padding: 30px;
-      max-width: 700px;
-      margin: auto;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-    form {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-      margin-bottom: 30px;
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 12px;
-    }
-    input, select {
-      margin-top: 4px;
-      padding: 8px;
-      width: 100%;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    button {
-      margin-top: 16px;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
-      background-color: #007bff;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    #output {
-      text-align: center;
-    }
-    #result {
-      max-width: 100%;
-      margin-top: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.15);
-    }
-    #plan {
-      margin-top: 25px;
-      white-space: pre-wrap;
-      text-align: left;
-      font-family: 'Courier New', monospace;
-      background: #f0f0f0;
-      padding: 15px;
-      border-radius: 8px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DecorAI</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #fafafa;
+    color: #333;
+    padding: 30px;
+    max-width: 700px;
+    margin: auto;
+    transition: background 0.3s, color 0.3s;
+  }
+  h1 { text-align: center; margin: 0; }
+  form {
+    background: white;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    margin-bottom: 30px;
+    transition: background 0.3s, color 0.3s;
+  }
+  label { font-weight: bold; display: block; margin-top: 12px; }
+  input, select { margin-top: 4px; padding: 8px; width: 100%; border: 1px solid #ccc; border-radius: 6px; }
+  button {
+    margin-top: 16px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 6px;
+    background-color: #007bff;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+  button:hover { background-color: #0056b3; }
+
+  #output { text-align: center; }
+  #result { max-width: 100%; margin-top: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.15); }
+  #plan {
+    margin-top: 25px;
+    white-space: pre-wrap;
+    text-align: left;
+    font-family: 'Courier New', monospace;
+    background: #f0f0f0;
+    padding: 15px;
+    border-radius: 8px;
+    transition: background 0.3s, color 0.3s;
+  }
+
+  /* Modal styles */
+  #galleryModal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.6);
+    justify-content: center;
+    align-items: center;
+  }
+  #galleryContent {
+    background: #fff;
+    padding: 20px;
+    border-radius: 12px;
+    max-width: 90%;
+    max-height: 80%;
+    overflow-y: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    transition: background 0.3s;
+  }
+  #galleryContent img {
+    width: 120px;
+    border-radius: 8px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    cursor: pointer;
+  }
+  #closeGallery {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    background: red;
+    color: white;
+    border: none;
+    font-size: 18px;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 6px;
+  }
+
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  .header-left { display: flex; align-items: center; gap: 10px; }
+  .header button { padding: 5px 10px; font-size: 12px; border-radius: 8px; }
+
+  /* Dark mode */
+  body.dark-mode { background: #121212; color: #f0f0f0; }
+  body.dark-mode form { background: #1e1e1e; color: #f0f0f0; }
+  body.dark-mode #plan { background: #1e1e1e; color: #f0f0f0; }
+  body.dark-mode #galleryContent { background: #1e1e1e; }
+</style>
 </head>
 <body>
-  <h1>AI Room Decorator</h1>
 
-  <form id="decorateForm">
-    <label>Upload Room Image:</label>
-    <input type="file" id="image" name="image" accept="image/*" required />
-
-    <label>Room Size:</label>
-    <select name="room_size" id="room_size">
-      <option value="small">Small</option>
-      <option value="medium" selected>Medium</option>
-      <option value="large">Large</option>
-    </select>
-
-    <label>Occasion:</label>
-    <input type="text" id="occasion" name="occasion" placeholder="e.g., Birthday, Wedding, Party" />
-
-    <label>Style:</label>
-    <input type="text" id="style" name="style" placeholder="e.g., Modern, Bohemian, Minimalist" />
-
-    <label>Materials (comma separated):</label>
-    <input type="text" id="materials" name="materials" placeholder="e.g., balloons, string lights" />
-
-    <label>Budget (USD):</label>
-    <input type="number" id="budget" name="budget" placeholder="e.g., 500" />
-
-    <button type="submit">Generate Decoration</button>
-  </form>
-
-  <div id="output">
-    <h2>Generated Image</h2>
-    <img id="result" src="" alt="AI Decorated Room" />
-    <h2>Decoration Plan</h2>
-    <pre id="plan"></pre>
+<div class="header">
+  <div class="header-left">
+    <button id="toggleGallery">Gallery</button>
+    <h1>AI Room Decorator</h1>
   </div>
+  <button id="darkModeToggle">Dark Mode</button>
+</div>
 
-  <script>
-    document.getElementById("decorateForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
+<form id="decorateForm">
+  <label>Upload Room Image:</label>
+  <input type="file" id="image" accept="image/*" required>
 
-      const formData = new FormData();
-      const imageFile = document.getElementById("image").files[0];
-      if (!imageFile) return alert("Please upload an image first.");
+  <label>Room Size:</label>
+  <select id="room_size">
+    <option value="small">Small</option>
+    <option value="medium" selected>Medium</option>
+    <option value="large">Large</option>
+  </select>
 
-      const materials = document.getElementById("materials").value
-        .split(",")
-        .map((m) => m.trim())
-        .filter((m) => m);
+  <label>Occasion:</label>
+  <input type="text" id="occasion" placeholder="e.g., Birthday, Wedding, Party">
 
-      formData.append("image", imageFile);
-      formData.append("room_size", document.getElementById("room_size").value);
-      formData.append("occasion", document.getElementById("occasion").value);
-      formData.append("style", document.getElementById("style").value);
-      formData.append("budget", document.getElementById("budget").value);
-      materials.forEach((m) => formData.append("materials[]", m));
+  <label>Style:</label>
+  <input type="text" id="style" placeholder="e.g., Modern, Bohemian, Minimalist">
 
-      document.getElementById("plan").textContent = "Generating... please wait.";
-      document.getElementById("result").src = "";
+  <label>Materials (comma separated):</label>
+  <input type="text" id="materials" placeholder="e.g., balloons, string lights">
 
-      try {
-        const res = await fetch("http://127.0.0.1:5000/decorate", {
-          method: "POST",
-          body: formData,
-        });
+  <label>Budget (USD):</label>
+  <input type="number" id="budget" placeholder="e.g., 500">
 
-        const data = await res.json();
+  <button type="submit">Generate Decoration</button>
+</form>
 
-        if (data.status === "success") {
-          document.getElementById("result").src = `data:image/png;base64,${data.image_base64}`;
-          document.getElementById("plan").textContent = data.text_plan || "No plan generated.";
-        } else {
-          document.getElementById("plan").textContent = "❌ " + data.message;
-        }
-      } catch (err) {
-        document.getElementById("plan").textContent = "❌ Error: " + err.message;
-      }
+<div id="output">
+  <h2>Generated Image</h2>
+  <img id="result" src="" alt="AI Decorated Room">
+  <h2>Decoration Plan</h2>
+  <pre id="plan"></pre>
+</div>
+
+<!-- Gallery Modal -->
+<div id="galleryModal">
+  <button id="closeGallery">X</button>
+  <div id="galleryContent"></div>
+</div>
+
+<script>
+const decorateForm = document.getElementById('decorateForm');
+const resultImg = document.getElementById('result');
+const planEl = document.getElementById('plan');
+
+const galleryModal = document.getElementById('galleryModal');
+const galleryContent = document.getElementById('galleryContent');
+const toggleGallery = document.getElementById('toggleGallery');
+const closeGallery = document.getElementById('closeGallery');
+const darkModeToggle = document.getElementById('darkModeToggle');
+
+let savedImages = JSON.parse(localStorage.getItem('decorAI_images') || '[]');
+
+function renderGallery() {
+  galleryContent.innerHTML = '';
+  if(savedImages.length === 0){
+    const p = document.createElement('p');
+    p.textContent = "No images yet.";
+    p.style.fontStyle = 'italic';
+    p.style.color = '#666';
+    galleryContent.appendChild(p);
+  } else {
+    savedImages.forEach(src => {
+      const img = document.createElement('img');
+      img.src = src;
+      img.onclick = () => {
+        resultImg.src = src;
+        galleryModal.style.display = 'none';
+      };
+      galleryContent.appendChild(img);
     });
-  </script>
+  }
+}
+
+// Open gallery modal
+toggleGallery.addEventListener('click', () => {
+  renderGallery();
+  galleryModal.style.display = 'flex';
+});
+
+// Close modal
+closeGallery.addEventListener('click', () => {
+  galleryModal.style.display = 'none';
+});
+
+// Dark mode toggle
+darkModeToggle.addEventListener('click', () => {
+  document.body.classList.toggle('dark-mode');
+});
+
+// Handle form submission
+decorateForm.addEventListener('submit', async (e) => {
+  e.preventDefault();
+  const imageFile = document.getElementById('image').files[0];
+  if (!imageFile) return alert('Please upload an image first.');
+
+  const materials = document.getElementById('materials').value.split(',').map(m => m.trim()).filter(m => m);
+  const formData = new FormData();
+  formData.append('image', imageFile);
+  formData.append('room_size', document.getElementById('room_size').value);
+  formData.append('occasion', document.getElementById('occasion').value);
+  formData.append('style', document.getElementById('style').value);
+  formData.append('budget', document.getElementById('budget').value);
+  materials.forEach(m => formData.append('materials[]', m));
+
+  planEl.textContent = "Generating... please wait.";
+
+  try {
+    const res = await fetch('http://127.0.0.1:5000/decorate', { method: 'POST', body: formData });
+    const data = await res.json();
+    if (data.status === 'success') {
+      const imgSrc = `data:image/png;base64,${data.image_base64}`;
+      resultImg.src = imgSrc;
+      savedImages.push(imgSrc);
+      localStorage.setItem('decorAI_images', JSON.stringify(savedImages));
+      planEl.textContent = data.text_plan || "No plan generated.";
+    } else {
+      planEl.textContent = "❌ " + data.message;
+    }
+  } catch (err) {
+    planEl.textContent = "❌ Error: " + err.message;
+  }
+});
+</script>
+
 </body>
 </html>
